# tensor

./: CMakeLists.txt
common/: cuda.cpp  cuda.hpp
gtest/: CMakeLists.txt
inc/: tensor.hpp
src/: main.cpp  tensor.cpp
tensor/: main.cpp  size.hpp  tensor.cpp  tensor.hpp
tests/: CMakeLists.txt  test_tensor.cpp
